<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_current_azurite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_current_azurite_hint"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:text="@string/entry_azurite_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_azurite_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_azurite_goal_hint"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:text="@string/entry_azurite_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_base_production"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_base_production_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:maxLines="1"
            android:text="@string/entry_base_production_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_rc_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_rc_amount_hint"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:text="@string/entry_rc_amount_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/entry_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:text="@string/save" />
</LinearLayout>
